"Updated application.properties, regenerated mapper implementations"

--- a/pa/src/main/resources/application.properties
+++ b/pa/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=pa
-spring.datasource.url=jdbc:postgresql://localhost:5432/pa
-createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://localhost:5433/pa_db
 spring.datasource.username=postgres
-spring.datasource.password=Bautaco
+spring.datasource.password=sa
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.banner-mode=off
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=5MB
+
